--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuetify": "^3.1.5"
   },
   "devDependencies": {
+    "@mdi/font": "^7.1.96",
     "@vitejs/plugin-vue": "^4.0.0",
     "cypress": "^12.0.2",
     "eslint": "^8.22.0",
