--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "moment": "^2.29.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
