--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "firebase": "^9.17.2",
     "moment": "^2.29.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue3-google-oauth2": "^1.0.7",
     "vuetify": "^3.1.5"
   },
   "devDependencies": {
