--- a/manifest-options.json
+++ b/manifest-options.json
@@ -5,25 +5,26 @@
     "scope": "/",
     "start_url": "/https://home-stock-manager.vercel.app",
     "name": "Home Stock Manager",
+    "description": "Home Stock Manager",
     "short_name": "HSM",
     "icons": [
         {
-            "src": "assets/icon-192x192.png",
+            "src": "icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "assets/icon-256x256.png",
+            "src": "icons/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "assets/icon-384x384.png",
+            "src": "icons/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "assets/icon-512x512.png",
+            "src": "icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
