--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
     "start-server-and-test": "^1.15.2",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.4"
   }
 }
