--- a/manifest-options.json
+++ b/manifest-options.json
@@ -3,8 +3,8 @@
     "background_color": "#B1A7A6",
     "display": "standalone",
     "scope": "/",
-    "id": "https://home-stock-manager.vercel.app",
-    "start_url": "https://home-stock-manager.vercel.app",
+    "id": "https://home-stock-manager.vercel.app/",
+    "start_url": "https://home-stock-manager.vercel.app/",
     "name": "Home Stock Manager",
     "description": "Home Stock Manager",
     "short_name": "HSM",
